<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="15dp"
            android:orientation="vertical"
            >
            <TextView android:layout_width="fill_parent"
                android:id="@+id/tvEnvironment"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:typeface="serif"
                android:text="@string/production_environment"
                android:textColor="#cd1076"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp">
            </TextView>

            <TextView android:layout_width="match_parent"
                android:id="@+id/tvClientId"
                android:layout_height="wrap_content"
                android:text="@string/clientId"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView android:layout_width="match_parent"
                android:id="@+id/tvTranId"
                android:layout_height="wrap_content"
                android:text="@string/tranId"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView android:id="@+id/tvStatusCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:hint="@string/status_code"/>

            <TextView android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:hint="@string/message"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnMappingVNPTSmartCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_vnptsmartca"
                style="@style/Btn_Style_Confirm" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>